# pciutils

./: .gitignore  ChangeLog  Makefile  README  README.Windows  TODO  bitops.h  build.sh  common.c  dwc_debugpci.c  dwc_debugpci.man  example.c  filter.c  help  ls-caps-vendor.c  ls-caps.c  ls-ecaps.c  ls-kernel.c  ls-map.c  ls-tree.c  ls-vpd.c  lspci.8  lspci.bash  lspci.c  lspci.h  lspci.man  meson.build  meson_options.txt  names.c  pci.ids  pci.ids.man  pciheader  pciheader.c  pcilib.man  pcilmr.c  pcilmr.man  pciutils.h  pciutils.lsm  pciutils.spec  setpci.8  (+6 more)
compat/: getopt.c  getopt.h
lib/: .gitignore  Makefile  access.c  aix-device.c  aos-expansion.c  bitops.h  buffer.c  caps.c  configure  darwin-device.c  darwin.c  dllrsrc.rc.in  dump.c  ecam.c  emulated.c  example.c  fbsd-device.c  filter.c  generic.c  header.h  hurd.c  i386-io-access.h  i386-io-beos.h  i386-io-cygwin.h  i386-io-djgpp.h  i386-io-haiku.h  i386-io-hurd.h  i386-io-linux.h  i386-io-openbsd.h  i386-io-sunos.h  i386-io-windows.h  i386-ports.c  init.c  internal.h  libpci.pc.in  libpci.ver  mmio-ports.c  names-cache.c  names-hash.c  names-hwdb.c  (+30 more)
lmr/: lmr.h  margin.c  margin_args.c  margin_hw.c  margin_log.c  margin_results.c
maint/: KORG-NOTES  README  RELEASE  gen-zone  push-to-public  release  release.pm  tag-release  upload
tests/: bridge-ctl-vga16  cap-address-xlation  cap-aer-ecrc-label  cap-aer-hdr  cap-aer-log  cap-aer-root  cap-atomicops  cap-dev3  cap-doe  cap-dvsec  cap-dvsec-cxl  cap-ea-1  cap-exp-aspm-latencies  cap-exp-dev2  cap-exp-lnkcap2  cap-exp-rev-slot  cap-flitmode  cap-ht  cap-ide  cap-l1-pm  cap-multicast  cap-pcie-1  cap-pcie-2  cap-phy32  cap-rcec  cap-rebar  cap-vendor-virtio  pri-pasid  tree-asus-p6t6  tree-fsl-p2020  tree-fujitsu-p8010
win32/: config.h  config.mk
